--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -61,7 +61,7 @@ body{
             text-align: center;
             font-family:'Times New Roman', Times, serif;
             font-size: $fontSizePromedioCelular+11px; 
-            margin-top: 5px; 
+            margin: 5px 5px 8px; 
 
             background-color: rgb(212, 234, 252);
             display:inline;
@@ -101,10 +101,21 @@ body{
             .noticia{
 
                 margin: 10px;
-                padding: 10px;
+                padding: 7px;
                 background-color: rgb(221, 221, 250); 
                 border: 3px dashed black;
                 font-size: $fontSizePromedioCelular;
+
+                .fotoNoticia{
+
+                    margin: 0px 3px 3px;
+                    height: 160px;
+                    width:250px;
+                    border: 2px black solid;
+                }
+                p{
+                    margin-bottom: 3px;
+                }
             
             }
         }//fin de las noticias recientes//
@@ -210,7 +221,7 @@ body{
             margin: 5px 4mm;
             .color-encabezado{
                 .imagen{
-
+                    margin: 0px;
                     @include tamaño(150px, 120px);
                 }
             
@@ -249,6 +260,12 @@ body{
                     margin: 16px 30px;
                     padding: 10px;
                     font-size: $fontSizePromedioTablet;
+                    .fotoNoticia{
+
+                        margin: 0px 5px 4px;
+                        height: 230px;
+                        width:400px;
+                    }
                 }
         }
 
@@ -369,6 +386,12 @@ body{
 
                     margin: 1cm;
                     padding: 7mm;
+                    .fotoNoticia{
+
+                        margin: 0px auto 4px;
+                        height: 260px;
+                        width:420px;
+                    }
                 }
             }
         }
