--- a/css/egresado.css
+++ b/css/egresado.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0; }
@@ -71,49 +72,37 @@ body {
     body .contenedor .carousel {
       grid-area: carru; }
       body .contenedor .carousel .carousel-inner .carousel-item {
-        /*las review*/
-        /*no me funciona la "," para que se repita un codigo en diferentes clases*/
-        /*no me funciona la "," para que se repita un codigo en diferentes clases*/ }
-        body .contenedor .carousel .carousel-inner .carousel-item .hoja1 {
+        /*las review*/ }
+        body .contenedor .carousel .carousel-inner .carousel-item .hojas {
           /*le hago flex para que el texto quede centrado en el recuadro*/
           display: flex;
-          flex-flow: row wrap;
-          justify-content: center;
-          align-items: center;
+          flex-flow: row nowrap;
+          justify-content: start;
+          align-items: flex-start;
           width: 200px;
           height: 100px;
           margin-left: auto;
           margin-right: auto;
           border: 2px solid black;
           background-color: white;
-          margin-bottom: 1cm;
-          font-size: 14px; }
-        body .contenedor .carousel .carousel-inner .carousel-item .hoja2 {
-          display: flex;
-          flex-flow: row wrap;
-          justify-content: center;
-          align-items: center;
-          width: 200px;
-          height: 100px;
-          margin-left: auto;
-          margin-right: auto;
-          border: 2px solid black;
-          background-color: white;
-          margin-bottom: 1cm;
-          font-size: 14px; }
-        body .contenedor .carousel .carousel-inner .carousel-item .hoja3 {
-          display: flex;
-          flex-flow: row wrap;
-          justify-content: center;
-          align-items: center;
-          width: 200px;
-          height: 100px;
-          margin-left: auto;
-          margin-right: auto;
-          border: 2px solid black;
-          background-color: white;
-          margin-bottom: 1cm;
-          font-size: 14px; }
+          margin-bottom: 1cm; }
+          body .contenedor .carousel .carousel-inner .carousel-item .hojas .fotoCarnet {
+            width: 165px;
+            height: 185px;
+            border: 2px black solid;
+            margin: auto 10px; }
+          body .contenedor .carousel .carousel-inner .carousel-item .hojas .texto {
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: center;
+            align-items: flex-start;
+            margin-top: 5px;
+            font-size: 17px; }
+            body .contenedor .carousel .carousel-inner .carousel-item .hojas .texto .review {
+              width: 430px;
+              height: 143px;
+              overflow: auto;
+              margin: 0px; }
     body .contenedor .hipervinculos {
       grid-area: hipervinculos;
       display: flex;
@@ -206,19 +195,21 @@ body {
       font-size: 17px; }
     body .contenedor .carousel .carousel-inner .carousel-item {
       /*las review*/
-      /*no me funciona la "," para que se repita un codigo en diferentes clases*/
-      /*no me funciona la "," para que se repita un codigo en diferentes clases*/ }
-      body .contenedor .carousel .carousel-inner .carousel-item .hoja1 {
-        width: 500px;
-        height: 200px;
-        margin-bottom: 1cm;
-        font-size: 17px; }
-      body .contenedor .carousel .carousel-inner .carousel-item .hoja2 {
-        width: 500px;
-        height: 200px;
-        margin-bottom: 1cm;
-        font-size: 17px; }
-      body .contenedor .carousel .carousel-inner .carousel-item .hoja3 {
+      /*no me funciona la "," para que se repita un codigo en diferentes clases
+                    .hoja2{
+                        @include tamaño(500px, 200px);
+
+                        margin-bottom: 1cm;
+                        font-size: 17px;
+                    }*/
+      /*no me funciona la "," para que se repita un codigo en diferentes clases
+                    .hoja3{
+                        @include tamaño(500px, 200px);
+
+                        margin-bottom: 1cm;
+                        font-size: 17px;
+                    }*/ }
+      body .contenedor .carousel .carousel-inner .carousel-item .hojas {
         width: 500px;
         height: 200px;
         margin-bottom: 1cm;
@@ -261,20 +252,8 @@ body {
       height: 470px;
       font-size: 17px; }
     body .contenedor .carousel .carousel-inner .carousel-item {
-      /*las review*/
-      /*no me funciona la "," para que se repita un codigo en diferentes clases*/
-      /*no me funciona la "," para que se repita un codigo en diferentes clases*/ }
-      body .contenedor .carousel .carousel-inner .carousel-item .hoja1 {
-        width: 600px;
-        height: 200px;
-        margin-bottom: 1cm;
-        font-size: 20px; }
-      body .contenedor .carousel .carousel-inner .carousel-item .hoja2 {
-        width: 600px;
-        height: 200px;
-        margin-bottom: 1cm;
-        font-size: 20px; }
-      body .contenedor .carousel .carousel-inner .carousel-item .hoja3 {
+      /*las review*/ }
+      body .contenedor .carousel .carousel-inner .carousel-item .hojas {
         width: 600px;
         height: 200px;
         margin-bottom: 1cm;
