--- a/scss/egresados.scss
+++ b/scss/egresados.scss
@@ -6,6 +6,7 @@
 *{
     margin: 0;
     padding: 0;
+    
 }
 
 
@@ -106,39 +107,13 @@ body{
             .carousel-inner{
                 .carousel-item{
                     /*las review*/
-                    .hoja1{
+                    .hojas{
                         /*le hago flex para que el texto quede centrado en el recuadro*/
-                        @include flexCentroCentro;
-
-                        @include tamaño(200px, 100px);
-                        @include autoEmparejamiento;
-
-                        border: 2px solid black;
-                        background-color: white;
-
-                        margin-bottom: 1cm;
-                        font-size: 14px;
-                    }
-
-                    /*no me funciona la "," para que se repita un codigo en diferentes clases*/
-                    .hoja2{
-                            
-                        @include flexCentroCentro;
-
-                        @include tamaño(200px, 100px);
-                        @include autoEmparejamiento;
-
-                        border: 2px solid black;
-                        background-color: white;
-
-                        margin-bottom: 1cm;
-                        font-size: 14px;
-                    }
-
-                    /*no me funciona la "," para que se repita un codigo en diferentes clases*/
-                    .hoja3{
+                        display: flex;
+                        flex-flow: row nowrap;
+                        justify-content: start;
+                        align-items: flex-start;
                         
-                        @include flexCentroCentro;
 
                         @include tamaño(200px, 100px);
                         @include autoEmparejamiento;
@@ -147,8 +122,29 @@ body{
                         background-color: white;
 
                         margin-bottom: 1cm;
-                        font-size: 14px;
-                    } 
+                        
+                        .fotoCarnet{
+                            @include tamaño(165px, 185px);
+                            border: 2px black solid;
+                            margin: auto 10px;
+                        }
+                        .texto{
+                            display: flex;
+                            flex-flow: column nowrap;
+                            justify-content: center;
+                            align-items: flex-start;
+
+                            margin-top: 5px;
+                            font-size: 17px;
+                            .review{
+                                @include tamaño(430px, 143px);
+                                overflow: auto;
+                                margin:0px;
+                            }
+                           
+                    
+                        }
+                    }
                 }
             }
         }
@@ -294,28 +290,28 @@ body{
             .carousel-inner{
                 .carousel-item{
                     /*las review*/
-                    .hoja1{
+                    .hojas{
                         @include tamaño(500px, 200px);
 
                         margin-bottom: 1cm;
                         font-size: 17px;
                     }
 
-                    /*no me funciona la "," para que se repita un codigo en diferentes clases*/
+                    /*no me funciona la "," para que se repita un codigo en diferentes clases
                     .hoja2{
                         @include tamaño(500px, 200px);
 
                         margin-bottom: 1cm;
                         font-size: 17px;
-                    }
+                    }*/
 
-                    /*no me funciona la "," para que se repita un codigo en diferentes clases*/
+                    /*no me funciona la "," para que se repita un codigo en diferentes clases
                     .hoja3{
                         @include tamaño(500px, 200px);
 
                         margin-bottom: 1cm;
                         font-size: 17px;
-                    }
+                    }*/
       
                 } 
             }
@@ -397,23 +393,7 @@ body{
                 .carousel-inner{
                     .carousel-item{
                         /*las review*/
-                        .hoja1{
-                            @include tamaño(600px, 200px);
-
-                            margin-bottom: 1cm;
-                            font-size: 20px;
-                        }
-
-                        /*no me funciona la "," para que se repita un codigo en diferentes clases*/
-                        .hoja2{
-                            @include tamaño(600px, 200px);
-
-                            margin-bottom: 1cm;
-                            font-size: 20px;
-                        }
-
-                        /*no me funciona la "," para que se repita un codigo en diferentes clases*/
-                        .hoja3{
+                        .hojas{
                             @include tamaño(600px, 200px);
 
                             margin-bottom: 1cm;
